locust/service-locust.yaml
apiVersion: v1
kind: Service
metadata:
  name: locust
  namespace: locust
spec:
  selector:
    app: locust
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8088
  type: ClusterIP
