locust/ingress-locust.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: locust
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
  labels:
    app: locust
  namespace: locust

spec:
  ingressClassName: nginx
  rules:
  - host: locust.giropops-senhas.local
    http:
      paths:
      - backend:
          service:
            name: locust
            port:
              number: 8088
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - locust.giropops-senhas.local
    secretName: giropops-senhas-tls-secret
